gcc/testsuite/gdc.test/compilable/imports/test16709a.d
module test16709a;
public import imports.test16709b:to;
