gcc/testsuite/gdc.test/fail_compilation/imports/test18480a.d
public import imports.test18480b : TestTemplate;
alias TestTemplate = TestTemplate;

